# mlops_mnist

./: .gitignore  README.md  docker-compose.yml
data/: Dockerfile  init_experiments_db.sql
notebooks/: data_analysis.ipynb
service/: Dockerfile  README.md  api.py  app.py  inference.py  pyproject.toml
service/openapi/: app.yaml
service/tests/: test_api.py  test_inference.py
web/: Dockerfile  app.py  pyproject.toml
web/sql/: df_management.py  models.py  query_lib.py
